index and CV updated

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ affiliation_url: https://www.cics.umass.edu/
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 alias: sumanvid97
-gmail: sumanvid97@gmail.com
+gmail: videsh.suman@gmail.com
 umass_mail: vsuman@cs.umass.edu
 github: https://github.com/sumanvid97
 linkedin: https://in.linkedin.com/in/sumanvid97
